--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,5 +34,6 @@ libc = "*"
 bytes = "*"
 
 [dependencies.filecoin-proofs-api]
-package = "filecoin-proofs-api"
-version = "5.0.0"
+#package = "filecoin-proofs-api"
+version = "5.1.0"
+path ="../../rust-filecoin-proofs-api"
