--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,4 +36,4 @@ bytes = "*"
 [dependencies.filecoin-proofs-api]
 #package = "filecoin-proofs-api"
 version = "5.1.0"
-path ="../../rust-filecoin-proofs-api"
+path ="../rust-filecoin-proofs-api"
