--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,5 @@ bytes = "*"
 [dependencies.filecoin-proofs-api]
 package = "filecoin-proofs-api"
 version = "5.1.1"
+path ="../rust-filecoin-proofs-api"
+
