--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ path = "src/main.rs"
 [dependencies]
 actix-rt = "*"
 actix-web = "^3"
-actix-multipart = "*"
+actix-multipart = "^0.3"
 futures = "^0.3"
 futures-core = "*"
 futures-util = "*"
