--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ path = "src/main.rs"
 actix-rt = "*"
 actix-web = "^3"
 actix-multipart = "^0.3"
-futures = "^0.3"
+futures = "*"
 futures-core = "*"
 futures-util = "*"
 log = "*"
@@ -29,7 +29,7 @@ fil_logger = "*"
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "*"
 mime = "*"
-lazy_static = "^1.4"
+lazy_static = "*"
 libc = "*"
 bytes = "*"
 
