--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ path = "src/main.rs"
 actix-rt = "*"
 actix-web = "^3"
 actix-multipart = "^0.3"
+actix-service = "*"
 futures = "*"
 futures-core = "*"
 futures-util = "*"
